--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,6 @@
     "node-sass": "^4.12.0",
     "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
