--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
