--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "dev-portfolio",
   "version": "1.0.0",
   "description": "Portfolio with React and Express.",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "client": "npm start --prefix client",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./server-build/index.js",
+    "dev": "npm-run-all --parallel build dev:*",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,8 @@
     "node",
     "express",
     "create-react-app",
-    "portfolio"
+    "portfolio",
+    "ssr"
   ],
   "author": "Sandra Vargas",
   "license": "ISC",
@@ -25,13 +28,47 @@
     "url": "https://github.com/lifeanddoodles/dev-portfolio/issues"
   },
   "homepage": "https://github.com/lifeanddoodles/dev-portfolio#readme",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^4.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "reactstrap": "^8.0.1",
+    "bootstrap": "^4.3.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.1",
+    "react-scripts": "^3.0.1",
+    "axios": "^0.19.0",
     "express": "^4.17.1",
+    "body-parser": "^1.19.0",
     "nodemailer": "^6.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-app": "^9.0.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
+    "webpack-cli": "^3.3.6",
+    "webpack-node-externals": "^1.7.2"
   }
 }
