--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "bugs": {
     "url": "https://github.com/lifeanddoodles/dev-portfolio/issues"
   },
-  "homepage": "https://github.com/lifeanddoodles/dev-portfolio#readme",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -62,8 +61,9 @@
     "nodemailer": "^6.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-preset-react-app": "^9.0.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
