--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "dev-portfolio",
   "version": "1.0.0",
   "description": "Portfolio with React and Express.",
+  "main": "index.js",
   "scripts": {
-    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
-    "dev:start": "nodemon ./server-build/index.js",
-    "dev": "npm-run-all --parallel build dev:*",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node ./src/server",
+    "client": "react-scripts start",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -48,17 +47,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "reactstrap": "^8.0.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "concurrently": "^4.1.1",
+    "express": "^4.17.1",
+    "nodemailer": "^6.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "^3.0.1",
-    "axios": "^0.19.0",
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "nodemailer": "^6.3.0"
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -70,5 +70,6 @@
     "npm-run-all": "^4.1.5",
     "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
