--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Portfolio with React and Express.",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node ./src/server",
     "server": "nodemon ./src/server",
     "client": "react-scripts start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build:client": "react-scripts build",
-    "build:server": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack.server.js",
+    "build:server": "NODE_ENV=production ./node_modules/.bin/webpack --mode=production --config webpack.server.js",
     "build": "npm-run-all --parallel build:*",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -56,6 +58,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
+    "gh-pages": "^2.1.1",
     "nodemailer": "^6.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -75,5 +78,6 @@
     "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
   },
+  "homepage": "https://lifeanddoodles.github.io/dev-portfolio",
   "proxy": "http://localhost:5000"
 }
