--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dev-portfolio",
   "version": "1.0.0",
   "description": "Portfolio with React and Express.",
+  "homepage": "https://front-end-portfolio.herokuapp.com/",
   "main": "index.js",
   "scripts": {
     "predeploy": "npm run build",
@@ -81,6 +82,5 @@
   "engines": {
     "node": "10.x"
   },
-  "homepage": "https://lifeanddoodles.github.io/dev-portfolio",
   "proxy": "http://localhost:5000"
 }
