--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "nodemailer": "^6.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
