--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
